server/tests/data/wig/should_pass/empty_lines.wig
fixedStep chrom=chr1 start=0 step=1
1

2

3
