server/tests/data/wig/should_fail/overlap.wig
fixedStep chrom=chr1 start=10 step=5 span=4
10.0
10.0
fixedStep chrom=chr1 start=5 step=70 span=8
10.0
10.0